# compound.ai

./: .env  app.py  portfolio.db  pyproject.toml  tester.ipynb
data/: portfolio.db  symbols.csv
src/: db.py  kpis.py  llm.py  llm_local.py  market.py  metrics.py  news.py  portfolio.py  scheduler.py  search.py  symbols.py  test.py  ui_news.py  ui_portfolio.py  ui_real_estate.py  ui_stock.py
